--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -16,13 +16,13 @@
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     {% if include.type == "grid" and teaser %}
       <div class="archive__item-teaser">
-        <img src=
+        <a href="{{ base_path }}{{ post.url }}"><img src=
           {% if teaser contains "://" %}
             "{{ teaser }}"
           {% else %}
             "{{ teaser | prepend: "/images/" | prepend: base_path }}"
           {% endif %}
-          alt="">
+          alt=""></a>
       </div>
     {% endif %}
     <h2 class="archive__item-title" itemprop="headline">
