--- a/_layouts/talk.html
+++ b/_layouts/talk.html
@@ -42,6 +42,9 @@ layout: default
 
       <section class="page__content" itemprop="text">
         {{ content }}
+        {% if page.pdf %}
+        <embed src="{{ page.pdf | prepend: base_path }}" width="100%" height="600px" type="application/pdf">
+        {% endif %}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
